WIP on unsubscribe

--- a/development.ini
+++ b/development.ini
@@ -10,6 +10,7 @@ api.key: 00000000-0000-0000-0000-000000000000
 es.host: http://localhost:9200
 
 h.feature.streamer: True
+h.notification.secret: secret
 
 horus.allow_email_auth: True
 horus.autologin: True
@@ -26,8 +27,9 @@ mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 pyramid.debug_all: True
 pyramid.reload_templates: True
 pyramid.includes:
-    h.queue.local
     h
+    h.notification
+    h.queue.local
     pyramid_basemodel
     pyramid_debugtoolbar
     pyramid_mailer
